working draft completed