@@ -2,18 +2,19 @@ package com.axial.modules.openapi_manager;
 
 import com.axial.modules.openapi_manager.model.config.ApiConfig;
 import com.axial.modules.openapi_manager.model.config.ApplicationApiConfig;
-import org.springdoc.core.models.GroupedOpenApi;
+import org.springdoc.core.GroupedOpenApi;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.context.annotation.PropertySource;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 /**
  * Created on December 2022
  */
-@PropertySource("classpath:default-springdoc-config.properties")
 @Configuration
+@PropertySource("classpath:default-springdoc-config.properties")
 public class SpringDocCustomizer {
 
     private final ApplicationApiConfig applicationConfig;
@@ -50,10 +51,24 @@ public class SpringDocCustomizer {
         return createGroupedOpenApi(4);
     }
 
+    @Bean
+    GroupedOpenApi addApi5() {
+        return createGroupedOpenApi(5);
+    }
+
+    @Bean
+    GroupedOpenApi addApi6() {
+        return createGroupedOpenApi(6);
+    }
+
+    @Bean
+    GroupedOpenApi addApi7() {
+        return createGroupedOpenApi(7);
+    }
 
     private GroupedOpenApi createGroupedOpenApi(int apiIndex) {
 
-        final List<ApiConfig> apis = OpenApiUtils.emptyIfNull(applicationConfig.getApis()).values().stream().toList();
+        final List<ApiConfig> apis = OpenApiUtils.emptyIfNull(applicationConfig.getApis()).values().stream().collect(Collectors.toList());
         final int apiSize = apis.size();
 
         if (apiIndex >= apiSize) {
@@ -65,7 +80,7 @@ public class SpringDocCustomizer {
         return GroupedOpenApi.builder()
                 .group(api.getGroupName())
                 .pathsToMatch(api.getPath())
-                .addOpenApiCustomizer(openApi ->
+                .addOpenApiCustomiser(openApi ->
                         customizerActions.customizeOpenAPI(openApi, api))
                 .build();
     }
